--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     },
     "dependencies": {
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "typescript-eslint": "^7.5.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.66",
