--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "bootstrap": "^5.3.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.3",
         "typescript-eslint": "^7.5.0"
     },
     "devDependencies": {
