--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,14 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "baseUrl": "./src",
+        "paths": {
+            "@components/*": ["components/*"],
+            "@screens/*": ["screens/*"],
+            "@routes/*": ["routes/*"],
+            "@assets/*": ["assets/*"]
+        }
     },
     "include": ["src"],
     "references": [{ "path": "./tsconfig.node.json" }]
