--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "bootstrap": "^5.3.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-query": "^3.39.3",
         "react-router-dom": "^6.22.3",
         "typescript-eslint": "^7.5.0"
     },
