corrigindo problemas e finalizando o tratamento de erro das rotas

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
             "@screens/*": ["screens/*"],
             "@routes/*": ["routes/*"],
             "@assets/*": ["assets/*"]
-        }
+        },
+        "allowSyntheticDefaultImports": true
     },
     "include": ["src"],
     "references": [{ "path": "./tsconfig.node.json" }]
